<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="details_screen">Movie Details</string>
    <string name="movie_image">Movie Image</string>

    <string name="pref_sorting_key">sorting_criteria</string>
    <string name="pref_sorting_order_key">sorting_order</string>
    <string name="pref_sorting_default_value">Popularity</string>
    <string name="favourite_films">Favourite Movies</string>

    <string name="popularity">Popularity</string>
    <string name="vote_average">Vote Average</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="my_favourite_films">Favourite Movies</string>

    <string name="settings_movie_order">Movie Order Criteria</string>
    <string name="title_activity_movie_details">Movie Details</string>

    <string name="plot_header">Plot</string>
    <string name="release_year">Release year</string>
    <string name="average_rate">Average rate</string>
    <string name="runtime">Runtime</string>
    <string name="genres">Genres</string>
    <string name="review_header">Reviews</string>
    <string name="trailers_header">Trailers</string>
    
    
    <string name="review_user">Movie Spectator</string>
    <string name="review_text">This is a great movie.</string>
    <string name="trailers_title">Trailer Title</string>
    <string name="trailer_play_image">Play Trailer</string>

    <string name="description_button_star">Mark as favourite</string>
    <string name="favourite_button">Favourite Button</string>

    <string name="no_runtime_available">In this moment, no runtime data available</string>
    <string name="no_genres_available">In this moment, no genres data available</string>
    <string name="no_trailers_available">No trailers available</string>
    <string name="no_reviews_available">No reviews available</string>
</resources>
