<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmovies.DetailMovieActivity"
    tools:showIn="@layout/activity_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/movie_background_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.75"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorTitle"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="@dimen/text_size_title_movie"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    tools:ignore="SelectableText" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/movie_detail_image"
                        android:layout_width="@dimen/image_view_width_detail"
                        android:layout_height="@dimen/image_view_height_detail"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_image" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <ImageButton
                            android:id="@+id/button_favourite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/favorite_removed"
                            android:layout_gravity="center_vertical"
                            android:background="@null"
                            android:contentDescription="@string/favourite_button"
                            android:layout_weight="0.1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:textSize="@dimen/text_size_fav_content"
                            android:text="@string/description_button_star"
                            android:layout_weight="0.9"/>


                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_section_title"
                        android:text="@string/release_year"/>

                    <View
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/movie_year"
                        android:textSize="@dimen/text_size_section_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="SelectableText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_section_title"
                        android:text="@string/average_rate"/>

                    <View
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/movie_rate"
                        android:textSize="@dimen/text_size_section_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="SelectableText" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_section_title"
                        android:text="@string/runtime"/>

                    <View
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/movie_runtime"
                        android:textSize="@dimen/text_size_section_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="SelectableText" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_section_title"
                        android:text="@string/genres"/>

                    <View
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/movie_genres"
                        android:textSize="@dimen/text_size_section_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="SelectableText" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/text_size_section_title"
                    android:text="@string/plot_header"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>


                <TextView
                    android:id="@+id/movie_plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="@dimen/text_size_section_content"
                    tools:ignore="SelectableText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/text_size_section_title"
                    android:text="@string/trailers_header"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"/>

                    <TextView
                        android:id="@+id/text_view_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textSize="@dimen/text_size_section_content"
                        android:visibility="invisible"/>

                </FrameLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/text_size_section_title"
                    android:text="@string/review_header"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"/>


                    <TextView
                        android:id="@+id/text_view_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textSize="@dimen/text_size_section_content"
                        android:visibility="invisible"/>

                </FrameLayout>



            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>